WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126062
[MIPS] Missing MacroAssemblerMIPS::branchTest8(ResultCondition, BaseIndex, TrustedImm32)
https://bugs.webkit.org/show_bug.cgi?id=126062
Summary
[MIPS] Missing MacroAssemblerMIPS::branchTest8(ResultCondition, BaseIndex, Tr...
Balazs Kilvady
Reported
2013-12-20 02:50:58 PST
MacroAssembler function introduced in
r160680
.
Attachments
proposed patch.
(1.43 KB, patch)
2013-12-20 03:05 PST
,
Balazs Kilvady
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kilvady
Comment 1
2013-12-20 03:05:44 PST
Created
attachment 219745
[details]
proposed patch.
Mark Hahnenberg
Comment 2
2013-12-20 07:19:13 PST
Comment on
attachment 219745
[details]
proposed patch. r=me
WebKit Commit Bot
Comment 3
2013-12-20 07:47:40 PST
Comment on
attachment 219745
[details]
proposed patch. Clearing flags on attachment: 219745 Committed
r160913
: <
http://trac.webkit.org/changeset/160913
>
WebKit Commit Bot
Comment 4
2013-12-20 07:47:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug