[MIPS] Missing MacroAssemblerMIPS::branchTest8(ResultCondition, BaseIndex, TrustedImm32) https://bugs.webkit.org/show_bug.cgi?id=126062

Patch by Balazs Kilvady <kilvadyb@homejinni.com> on 2013-12-20
Reviewed by Mark Hahnenberg.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::branchTest8):

Canonical link: https://commits.webkit.org/144038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160913 268f45cc-cd09-0410-ab3c-d52691b4dbfc